--- a/pom.xml
+++ b/pom.xml
@@ -3,27 +3,74 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- Basic project information -->
     <groupId>com.example</groupId>
     <artifactId>my-maven-project</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <!-- Project name and description -->
     <name>My Maven Project</name>
-    <url>http://www.example.com</url>
+    <description>A sample Maven project to demonstrate deployment.</description>
 
+    <!-- Project dependencies -->
     <dependencies>
-        <!-- Add your dependencies here -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
         </dependency>
+        <!-- Add other dependencies here -->
     </dependencies>
 
+    <!-- Build settings -->
     <build>
         <plugins>
-            <!-- Add your plugins here -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
+            <!-- Add other build plugins here -->
         </plugins>
     </build>
+
+    <!-- Distribution management for deployment -->
+    <distributionManagement>
+        <repository>
+            <id>my-repo</id>
+            <name>My Repository</name>
+            <url>http://my-repo.com/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>my-snapshot-repo</id>
+            <name>My Snapshot Repository</name>
+            <url>http://my-repo.com/maven2-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <!-- Optional profiles -->
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <env>development</env>
+            </properties>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <env>production</env>
+            </properties>
+        </profile>
+    </profiles>
 </project>
